<resources>
    <string name="app_name">ZipBolt</string>
    <string name="fileTransferServiceNotificationChannelID">FileTransferServiceNotificationID</string>
    <string name="fileTransferServiceChannelName">ZipBolt File Transfer Service Notification</string>
    <string name="fileTransferServiceNotificationTitle">ZipBolt</string>
    <string name="fileTransferServiceNotificationContentText">
        ZipBolt is processing files
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connect">Connect</string>
    <string name="send_label">Send</string>
    <string name="desktop_label">Desktop</string>
    <string name="or_label">Or</string>
    <string name="share_zipbolt_label">Share ZipBolt</string>
    <string name="iphone_label">iPhone</string>
    <string name="collapse_searching_for_peers_content_description">Collapse searching for peers</string>
    <string name="searching_for_peers_label">Searching for peers</string>
    <string name="stop_searching_for_peers_content_description">Stop searching for peers</string>
    <string name="stop_searching_for_peers_label">Stop searching</string>
    <string name="discovered_peers_label">Discovered Peers</string>
    <string name="close_connection_content_description">Close connection</string>
    <string name="connected_label">Connected</string>
    <string name="you_can_transfer_and_receive_files_now">You can transfer and receive files now!</string>
    <string name="you_can_transfer_files_now">You can now send files to %1$s</string>
    <string name="you_can_receive_files_now">You can receive files from %1$s</string>
    <string name="device_connection_details">Device Details</string>
    <string name="connect_to">Connect to</string>
    <string name="no_item_label">No item</string>
    <string name="completed_and_scheduled">Completed and Scheduled</string>
    <string name="sending">Sending</string>
    <string name="receiving">Receiving</string>
    <string name="transfer_history">Transfer History</string>
    <string name="active_data_flow_label">Active data flow, swipe up to view details.</string>
    <string name="send_to_peer_connection_description">High-speed file transfer but you cannot receive from peer. Peer must choose <b>Receive</b>.</string>
    <string name="receive_connection_description">High-speed file receive but you cannot send file to peer. Peer must choose <b>Send</b>.</string>
    <string name="receive">Receive</string>
    <string name="bidirectional_file_transfer_description">Low-speed bidirectional file transfer. You can transfer and receive files from peer. Peer must also
    choose <b>Send and Receive</b>.</string>
    <string name="send_and_receive">Send and Receive</string>
    <string name="zip_bolt_file_transfer_service">ZipBoltFileTransferService</string>
    <string name="waiting_for_receiver">Waiting for receiver</string>
    <string name="waiting_for_peers_description">Tell your friend to open the ZipBolt app, click on "Connect" and then
    click on "Receive" to discover your device</string>
    <string name="searching_for_peers_discovery_description">Tell your friend to open the ZipBolt app, click on "Connect" and then
    click on "Send" so that you can discover his/her device</string>
    <string name="send_and_receive_searching_for_peers_discovery_description">
        Tell your friend to open the ZipBolt app, click on "Connect" and then
    click on "Send and Receive" so that you can connect his/her device
    </string>
    <string name="middle_round_dot_text_separation">%1$s \u2022 %2$s</string>
    <string name="comma_separated_strings">%1$s \u25E6 %2$s</string>
    <string name="directory_navigation_header_text">%1$s \u279E %2$s</string>
    <string name="data_percent_transferred">%1$d%%</string>
    <string name="data_transferred_over_data_size_place_holder">%1$d/%1$s</string>
    <string name="document_file_icon_desc">document file icon</string>
    <string name="close_group_button_desc">Close group button</string>
    <string name="group_created_label">Group Created</string>
    <string name="waiting_for_receiver_label">Waiting for receiver</string>
    <string name="connecting_to_device_message_place_holder">Connecting to %1$s</string>
    <string name="total_number_of_items_and_size_of_items_selected_placeholder">
        %1$d (%2$s)
    </string>
    <string name="install">Install</string>
</resources>