<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_margin="@dimen/standard_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/standard_text_view_padding"
                android:text="@string/send_label"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:padding="@dimen/standard_text_view_padding"
                android:layout_height="wrap_content"
                android:maxLines="3"
                android:ellipsize="end"
                android:text="@string/send_to_peer_connection_description"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_margin="@dimen/standard_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/standard_text_view_padding"
                android:text="@string/receive"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:padding="@dimen/standard_text_view_padding"
                android:layout_height="wrap_content"
                android:maxLines="3"
                android:ellipsize="end"
                android:text="@string/receive_connection_description"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_margin="@dimen/standard_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/standard_text_view_padding"
                android:text="@string/send_and_receive"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:padding="@dimen/standard_text_view_padding"
                android:layout_height="wrap_content"
                android:maxLines="3"
                android:ellipsize="end"
                android:text="@string/bidirectional_file_transfer_description"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>