<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <com.google.android.material.textview.MaterialTextView
        style="@style/DataCategoryTextViewTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:drawableTop="@drawable/slide_down_indicator"
        android:drawablePadding="10dp"
        android:padding="4dp"
        android:text="@string/connect_to"
        android:textAlignment="center"
        android:textSize="18sp" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/connect_to_android"
        android:layout_width="match_parent"
        android:padding="4dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp">

        <com.google.android.material.textview.MaterialTextView
            style="@style/ModalBottomSheetTextViewAppearance"
            android:drawableStart="@drawable/android_icon"
            android:text="Android"
            app:drawableStartCompat="@drawable/android_icon" />

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/connect_to_iphone"
        android:layout_width="match_parent"
        android:padding="4dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp">

        <com.google.android.material.textview.MaterialTextView
            style="@style/ModalBottomSheetTextViewAppearance"
            android:drawableStart="@drawable/apple_icon"
            android:text="@string/iphone_label"
            app:drawableStartCompat="@drawable/apple_icon" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/connect_to_desktop"
        android:padding="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp">

        <com.google.android.material.textview.MaterialTextView
            style="@style/ModalBottomSheetTextViewAppearance"
            android:drawableStart="@drawable/pc_icon"
            android:text="@string/desktop_label"
            app:drawableStartCompat="@drawable/pc_icon" />

    </com.google.android.material.card.MaterialCardView>

    <com.salesground.zipbolt.ui.customviews.DividerLabel
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:paddingHorizontal="8dp"
        android:text="@string/or_label"
        android:textAlignment="center"
        app:strokeLineHeight="0.5" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/share_zip_bolt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp">

        <com.google.android.material.textview.MaterialTextView
            style="@style/ModalBottomSheetTextViewAppearance"
            android:layout_marginBottom="8dp"
            android:drawableStart="@drawable/share_icon"
            android:text="@string/share_zipbolt_label"
            app:drawableStartCompat="@drawable/share_icon" />
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>