<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="deviceName"
            type="String" />
        <variable
            name="deviceAddress"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/collapse_expanded_connected_to_peer_no_action_image_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/collapse_searching_for_peers_content_description"
            android:src="@drawable/arrow_down"
            app:layout_constraintEnd_toStartOf="@+id/expanded_connected_to_peer_no_action_header_text_view"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/expanded_connected_to_peer_no_action_header_text_view"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginVertical="8dp"
            android:gravity="center"
            android:lines="1"
            android:text="@string/device_connection_details"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintEnd_toStartOf="@+id/expanded_connected_to_peer_no_action_close_connection_image_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/collapse_expanded_connected_to_peer_no_action_image_button"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/expanded_connected_to_peer_no_action_close_connection_image_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/collapse_searching_for_peers_content_description"
            android:src="@drawable/close_icon_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/expanded_connected_to_peer_no_action_header_text_view"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/expanded_connected_to_peer_no_action_peer_device_details_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/standard_margin"
            android:layout_marginVertical="6dp"
            android:lineSpacingExtra="4dp"
            android:padding="@dimen/standard_text_view_padding"
            setConnectedDeviceName="@{deviceName}"
            setConnectedDeviceIpAddress="@{deviceAddress}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            app:layout_constraintBottom_toTopOf="@+id/appCompatImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@+id/expanded_connected_to_peer_no_action_header_text_view" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/standard_margin"
            android:padding="8dp"
            android:src="@drawable/ic_undraw_well_done"
            app:layout_constraintBottom_toTopOf="@+id/expanded_connected_to_peer_no_action_transfer_action_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expanded_connected_to_peer_no_action_peer_device_details_text_view" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/expanded_connected_to_peer_no_action_transfer_action_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_marginBottom="64dp"
            android:layout_marginHorizontal="@dimen/standard_margin"
            android:padding="@dimen/standard_text_view_padding"
            android:text="@string/you_can_transfer_and_receive_files_now"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>